# experiments

./: PROMPT.md  README.md  agents.json  arbos.py  basilica_training.py  citadel_server.py  deploy_citadel.py  pyproject.toml  run_basilica_experiment.py  simulate_basilica.py  sparseloco.py  zk_spot.py
context/Quentin/: GOAL.md  STATE.md
context/Quentin/20260309_153037/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_153719/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_154542/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_155338/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_160019/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_160748/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_161631/: exec_output.txt  logs.txt  plan.md  plan_output.txt  rollout.md
context/Quentin/20260309_162442/: exec_output.txt  logs.txt  (+3 more)
context/chat/: 20260309_151821.jsonl  20260309_155916.jsonl  20260309_162418.jsonl  20260309_165848.jsonl  20260309_172952.jsonl  20260309_182818.jsonl  20260309_190121.jsonl
context/quant/: GOAL.md  INBOX.md  STATE.md
quant/: backtest_engine.py  data_ingestion.py  quant_aggregator.py  quant_model.py  quant_worker.py
quentin/: basilica_training.py  citadel_server.py  deploy_citadel.py  run_basilica_experiment.py  simulate_basilica.py  sparseloco.py  zk_spot.py
shared/: main_model.py
(+82 files in other folders)
